--- a/app/views/user/login.html.twig
+++ b/app/views/user/login.html.twig
@@ -3,74 +3,76 @@
 {% set page = 'login' %}
 
 {% block header_title %}
-    {# Connexion #}
+  {# Connexion #}
 {% endblock %}
 
 {% block header_description %}
-    {# Découvrez nos derniers articles et restez informé de nos activités. #}
+  {# Découvrez nos derniers articles et restez informé de nos activités. #}
 {% endblock %}
 
 {% block content %}
-        <div id="layoutAuthentication">
-            <div id="layoutAuthentication_content">
-                <main>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-5">
-                                <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Se connecter</h3></div>
-                                    <div class="card-body">
-                                        <form class="needs-validation" novalidate action="login" method="POST">
-                                            {% if error %}
-                                                <div class="alert alert-danger" role="alert">
-                                                    {{ error }}
-                                                </div>
-                                            {% endif %}
-                                            {% if success is defined %}
-                                                <div class="alert alert-success" role="alert">
-                                                    {{ success }}
-                                                </div>
-                                            {% endif %}
-                                           <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputEmail" type="email" name="email"  required/>
-                                                <label for="inputEmail">Adresse Email</label>
-                                                <div class="invalid-feedback">
-                                                    Adresse email incorrect
-                                                </div>
-                                                <div class="valid-feedback">
-                                                </div>
-                                            </div>
-                                            <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputPassword" type="password" name="passWord" required/>
-                                                <label for="inputPassword">Password</label>
-                                                <div class="invalid-feedback">
-                                                    Mot de passe incorrect
-                                                </div>
-                                                <div class="valid-feedback">
-                                                </div>
-                                            </div>
-                                            <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <a class="text-success" href="#">Mot de passe oublié ?</a>
-                                                <button type="submit" class="btn btn-dark">Connexion</button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="card-footer text-center py-3">
-                                        <div class=""><a class="text-success" href="http://localhost/mon-blog/register">Je n'ai pas de compte je m'inscris!</a></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+  <div id="layoutAuthentication">
+    <div id="layoutAuthentication_content">
+      <main>
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-5">
+              <div class="card shadow-lg border-0 rounded-lg mt-5">
+                <div class="card-header">
+                  <h3 class="text-center font-weight-light my-4">Se connecter</h3>
+                </div>
+                <div class="card-body">
+                  <form class="" novalidate="novalidate" action="login" method="POST">
+                    {% if error %}
+                      <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                      </div>
+                    {% endif %}
+                    {% if success is defined %}
+                      <div class="alert alert-success" role="alert">
+                        {{ success }}
+                      </div>
+                    {% endif %}
+                    <div class="form-floating mb-3 {% if emailError %}has-error{% endif %}">
+                      <input class="form-control {% if emailError %}is-invalid{% endif %}" id="inputEmail" type="email" name="email" required="required" value="{{ email }}"/>
+                      <label for="inputEmail">Adresse Email *</label>
+                      {% if emailError %}
+                        <span class="error-message text-danger">{{ emailError }}</span>{% endif %}
                     </div>
-                </main>
-            </div>
-            <div id="layoutAuthentication_footer">
-                <footer class="py-5 bg-light mt-5">
-                    <div class="container-fluid px-4">
-                        <div class="d-flex align-items-center justify-content-between small">
-                        </div>
+                    <div class="form-floating mb-3 {% if passwordError %}has-error{% endif %}">
+                      <input class="form-control {% if passwordError %}is-invalid{% endif %}" id="inputPassword" type="password" name="passWord" required="required"/>
+                      <label for="inputPassword">Mot de passe *</label>
+                      {% if passwordError %}
+                        <span class="error-message text-danger">{{ passwordError }}</span>{% endif %}
                     </div>
-                </footer>
+
+                    <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
+                      <a class="text-success" href="#">Mot de passe oublié ?</a>
+                      <button type="submit" class="btn btn-dark">Connexion</button>
+                    </div>
+                  </form>
+                </div>
+                <div class="card-footer text-center py-3">
+                  <div class="">
+                    <a class="text-success" href="http://localhost/mon-blog/register">Je n'ai pas de compte je m'inscris!</a>
+                  </div>
+                  <div class="card-text mt-2">
+                    <small class="text-body-secondary">
+                      * Ces champs sont obligatoire</small>
+                  </div>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
+      </main>
+    </div>
+    <div id="layoutAuthentication_footer">
+      <footer class="py-5 bg-light mt-5">
+        <div class="container-fluid px-4">
+          <div class="d-flex align-items-center justify-content-between small"></div>
+        </div>
+      </footer>
+    </div>
+  </div>
 {% endblock %}
