--- a/public/css/myStyles.css
+++ b/public/css/myStyles.css
@@ -1,7 +1,7 @@
 #myNavStyles .nav-link .fa,
 #myNavStyles .nav-link .fa{
   /* color: #FFF; */
-  font-size: 20px;
+  /* font-size: 20px; */
   border-left: #FFF 3px solid;
   padding-left: 10px;
 }
