--- a/app/views/user/register.html.twig
+++ b/app/views/user/register.html.twig
@@ -65,6 +65,7 @@
                           <div class="valid-feedback"></div>
                         </div>
                       </div>
+                      <div class="text-muted small"> Le mot de passe doit contenir au moins 8 caractères, un nombre et un caractère spécial (&, $, ...)</div>
                     </div>
                     <div class="mt-4 mb-0">
                       <div class="d-grid">
